Improve tool generation system with two-phase AI analysis - Updated Vercel config to disable authentication protection (public: true) - Enhanced Claude analyze API with sophisticated service analysis prompts - Added new generate-interface API endpoint for detailed tool schemas - Updated ClaudeAnalysisResponse type with new fields (serviceName, serviceType, etc.) - Implemented two-phase tool generation: URL analysis + interface generation - Fixed component JSX structure and TypeScript errors - Improved tool generation to match original Express implementation quality - Added enhanced predictive actions and tool interface generation

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "framework": "nextjs",
+  "public": true,
   "headers": [
     {
       "source": "/(.*)",
